# holoMap

./: .clang-format  .clang-tidy  .cleanCode  CMakeLists.txt  Makefile
components/coordinateTransform/: main.cpp
gpx/: Gule Sva.gpx  HV_Komplett_hero_trail.gpx  HV_Komplett_hero_trail.html  HV_Komplett_hero_trail.json  HV_Komplett_hero_trail.xml  H_gevarde_velo_rama_stifest.gpx  H_gevarde_velo_rama_stifest.json  Telefonløypa.gpx  _metric.json  floatToMetricCoordinates.py  floatToMetricCoordinates2.py  gpxFileToJsonFile.py  gpxToJson.py  gpxToJsonWithElevation.py
kart/vaset_skiheiser/: heightmap.raw
maps/HV_6km/: HV_Komplett_hero_trail.gpx
maps/SH_6km/: SH_6km.glb
maps/vaset_5km/: vaset_5mk_50vertex.blend
maps/vaset_ron_stor/: heightmap.raw
project/hooks/: pre-commit  pre-push
